version 0.9.8 (svn revision 4526)
           * fixes for filling continents in orthographic projection.
           * added 'maskandscale' kwarg to NetCDFFile to
             optionally turn off automatic masking and rescaling
             of variable data.
           * NetCDFFile will try to use PyNIO if it installed
             and the file cannot be read with pupynere.  This
             allows GRIB1,GRIB2,HDF4 and HDFEOS2 files to 
             be read.
           * 'fmt' kwarg to drawparallels and drawmeridians can 
             now be a custom string formatting function (example
             customticks.py demonstrates usage).
           * remove 'linestyle' kwarg from drawparallels and 
             drawmeridians (it never did anything anyway since
             it was overridden by the 'dashes' kwarg).
           * modify NetCDFFile to use dap module to read remote
             datasets over http.  Include dap and httplib2 modules.
           * modify NetCDFFile to automatically apply scale_factor
             and add_offset, and return masked arrays masked where
             data == missing_value or _FillValue.
           * add 'fill_color' option to drawmapboundary, to optionally
             fill the map projection background a certain color.
           * added 'sstanom' colormap from
             http://www.ghrsst-pp.org/GHRSST-PP-Data-Tools.html
version 0.9.7 (svn revision 4422)
           * fixed bug in drawlsmask for 'moll','robin' and 'sinu'
             projections.
           * added lake_color keyword to fillcontinents.
           * fixed a bug in the 'tmerc' projection.
           * added pure python NetCDFFile reader from Roberto De Almeida 
             to basemap namespace
             (from matplotlib.toolkits.basemap import NetCDFFile).
           * added support for full-resolution boundaries (will be
             a separate download).  Full-res files (totaling around
             100 mb) available in SVN.